[package]
name = "nostr-cli"
version = "0.43.0"
edition = "2024"
description = "Nostr CLI"
authors = ["Yuki Kishimoto <yukikishimoto@protonmail.com>", "Rust Nostr Developers"]
homepage = "https://github.com/rust-nostr/nostr-cli"
repository = "https://github.com/rust-nostr/nostr-cli.git"
license = "MIT"
readme = "README.md"
rust-version = "1.85.0"
keywords = ["nostr", "cli"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
dirs = "5.0"
indicatif = "0.17"
nostr-connect = "0.44.0"
nostr-lmdb = "0.44.0"
nostr-relay-builder = "0.44.0"
nostr-sdk = { version = "0.44.1", features = ["all-nips", "tor"] }
once_cell = { version = "1.21", default-features = false }
prettytable-rs = "0.10"
regex = "1.11.1"
rustyline = { version = "16.0", default-features = false, features = ["with-file-history"] }
tokio = { version = "1.47", features = ["full"] }
